# libCSM

./: .gitignore  .gitmodules  .python-version  GNUmakefile  Jenkinsfile.github  MANIFEST.in  README.adoc  README.md  entry_points.ini  libcsm.spec  noxfile.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  shellcheck.yml
.github/actions/prepare-artifacts/: action.yml
.github/workflows/: docs.yml  lint.yml  promote-prerelease.yml  promote-release.yml  sh-checker.yaml  shellcheck.yaml  shellcheck.yml  shellspec.yml  tests.yml
docs/: conf.py  index.rst  libcsm.api.rst  libcsm.bss.api.rst  libcsm.bss.rst  libcsm.bss.set_image.rst  libcsm.hsm.components.rst  libcsm.hsm.rst  libcsm.hsm.xnames.rst  libcsm.logger.rst  libcsm.os.rst  libcsm.requests.rst  libcsm.requests.session.rst  libcsm.rst  libcsm.s3.images.rst  libcsm.s3.rst  libcsm.s3.s3object.rst  libcsm.sls.api.rst  libcsm.sls.get_hostname.rst  libcsm.sls.get_xname.rst  libcsm.sls.rst  libcsm.tests.bss.rst  libcsm.tests.bss.test_api.rst  libcsm.tests.bss.test_set_image.rst  libcsm.tests.hsm.rst  libcsm.tests.hsm.test_api.rst  libcsm.tests.hsm.test_xnames.rst  libcsm.tests.mock_objects.mock_http.rst  libcsm.tests.mock_objects.mock_sls.rst  libcsm.tests.mock_objects.rst  libcsm.tests.rst  libcsm.tests.s3.rst  libcsm.tests.s3.test_get_s3_image_info.rst  libcsm.tests.s3.test_s3object.rst  libcsm.tests.sls.rst  libcsm.tests.sls.test_api.rst  libcsm.tests.sls.test_get_hostname.rst  libcsm.tests.sls.test_get_xname.rst  libcsm.tests.test_api.rst  libcsm.tests.test_os.rst  (+1 more)
examples/: README.adoc  cmd.sh  cmdhook.sh  readme.md  trace.sh
libcsm/: api.py  logger.py  os.py  set_image_in_bss.py
libcsm/bss/: api.py  bssApi.py  set_image.py  set_image_OLD.py
libcsm/ceph/: api.py  ceph_upgrade.py  ceph_upgrade_monitor.py
libcsm/hsm/: api.py  components.py  get_xnames.py  hsmApi.py  xnames.py
libcsm/requests/: session.py
libcsm/s3/: images.py  s3_object.py  s3_object_OLD.py  s3object.py
libcsm/sls/: api.py  get_hostname.py  get_xname.py
libcsm/tests/: __init__.py  test_api.py  test_os.py
libcsm/tests/bss/: test_api.py  test_bssApi.py  test_set_image.py
libcsm/tests/ceph/: test_ceph_api.py
libcsm/tests/hsm/: test_api.py  test_get_xname_by_subrole.py  test_hsmApi.py  test_xnames.py
libcsm/tests/mock_objects/: mock_http.py  mock_sls.py
libcsm/tests/s3/: test_get_s3_image_info.py  test_s3_object.py  test_s3object.py
libcsm/tests/sls/: test_api.py  test_get_hostname.py  test_get_xname.py
sh/: README.adoc  cmd.sh  internal.sh  lib.sh  logger.sh  readme.md  vshasta.sh  yaml.sh
shell/: csm-common.sh
shell/tests/: csm-common.bats
spec/: cmd_spec.sh  internal_spec.sh  logger_spec.sh  vshasta_spec.sh  yaml_spec.sh
tests/: __init__.py
