#
# MIT License
#
# (C) Copyright 2023 Hewlett Packard Enterprise Development LP
#
# Permission is hereby granted, free of charge, to any person obtaining a
# copy of this software and associated documentation files (the 'Software'),
# to deal in the Software without restriction, including without limitation
# the rights to use, copy, modify, merge, publish, distribute, sublicense,
# and/or sell copies of the Software, and to permit persons to whom the
# Software is furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included
# in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED 'AS IS', WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
# THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR
# OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
# ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
# OTHER DEALINGS IN THE SOFTWARE.
#
[project]
name = 'libcsm'
authors = [
    { name = 'Jacob Salmela', email = 'jacob.salmela@hpe.com' },
    { name = 'Mitchell Tishmack', email = 'mitchell.james.tishmack@hpe.com' },
    { name = 'Russell Bunch', email = 'doomslayer@hpe.com' },
]
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
description = 'Callables and modules for CSM usage.'
dependencies = [
    'boto3~=1.26',
    'botocore~=1.29',
    'click~=8.1',
    'kubernetes~=31.0.0',
    'requests~=2.28',
]
dynamic = ['entry-points', 'scripts', 'version']
maintainers = [
    { name = 'Russell Bunch', email = 'doomslayer@hpe.com'}
]
requires-python = '>=3.9'

[metadata]
url = 'https://github.com/Cray-HPE/libCSM'

license = { file = 'LICENSE' }

[project.optional-dependencies]
ci = [
    'nox~=2024.10.9',
]
docs = [
    'recommonmark~=0.7.1',
    'sphinx-autodoc-typehints~=2.5.0',
    'sphinx-copybutton~=0.5.2',
    'sphinx-markdown-tables~=0.0.17',
    'sphinx-rtd-theme~=2.0.0',
    'sphinx~=8.1.3',
]
lint = [
    'ruff~=0.6.3',
]
test = [
    'coverage~=7.1',
    'pytest~=8.0',
    'pytest-cov~=6.0',
    'ruff~=0.6.3',
    'mock~=5.0',
]

# Defines which folders belong to our package.
[tool.setuptools.packages.find]
include = ["libcsm*"]
exclude = ["libcsm.tests*"]

[tool.setuptools.dynamic]
entry-points = { file = ['entry_points.ini'] }
readme = { file = ['README.adoc'], content-type = 'text/asciidoc' }

# Allows for dynamic versioning via git-tag.
[tool.setuptools_scm]

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools',
    'setuptools_scm[toml]',
    'wheel',
]

[tool.distutils.bdist_wheel]
universal = false # This app is not compatible with Python2.

[tool.ruff]
# Enable pycodestyle (`E`), Pyflakes (`F`), docstrings (`D`)
select = ["E", "F", "D", "PL"]
ignore = [
  "D104", # Missing docstring in public package
  "D107", # Missing docstring in `__init__`
  "D200", # One-line docstring should fit on one line
  "D203", # 1 blank line required before class docstring
  "D205", # 1 blank line required between summary line and description
  "D212"  # Multi-line docstring summary should start at the first line
  ]

# Allow autofix for all enabled rules (when `--fix`) is provided.
# fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
